tests/traci/set_variable/Vehicle/ChangeTarget/InvalidEdgeId/net_state.traci
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Fri Feb  8 10:08:46 2019 by Eclipse SUMO Version v1_0_1+0645-93703db
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="routes.rou.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <netstate-dump value="netstate_dump.xml"/>
    </output>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

    <traci_server>
        <remote-port value="33379"/>
    </traci_server>

</configuration>
-->

<netstate xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/netstate_file.xsd">
    <timestep time="0.00">
        <edge id="e_m5">
            <lane id="e_m5_0">
                <vehicle id="veh0" pos="0.00" speed="0.00"/>
            </lane>
            <lane id="e_m5_1"/>
            <lane id="e_m5_2"/>
        </edge>
    </timestep>
    <timestep time="1.00">
        <edge id="e_m5">
            <lane id="e_m5_0">
                <vehicle id="veh0" pos="0.60" speed="0.60"/>
            </lane>
            <lane id="e_m5_1"/>
            <lane id="e_m5_2"/>
        </edge>
    </timestep>
    <timestep time="2.00">
        <edge id="e_m5">
            <lane id="e_m5_0">
                <vehicle id="veh0" pos="1.97" speed="1.37"/>
            </lane>
            <lane id="e_m5_1"/>
            <lane id="e_m5_2"/>
        </edge>
    </timestep>
</netstate>
